[project]
name = "common-utility-scripts"
version = "0.1.0"
description = "File conversion and management utility scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.12",
    "docx2pdf>=0.1.8",
    "beautifulsoup4>=4.12.2",
    "fuzzywuzzy>=0.18.0",
    "PyMuPDF>=1.22.5",
]
