[project]
name = "common-utility-scripts"
version = "0.1.0"
description = "File conversion and management utility scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.12",
    "docx2pdf>=0.1.8",
    "beautifulsoup4>=4.12.2",
    "fuzzywuzzy>=0.18.0",
    "PyMuPDF>=1.22.5",
]

[project.scripts]
duplicate-deleter = "duplicate_deleter:main"
emptyfolder-deleter = "emptyfolder_deleter:main"
extension-sorter = "extenstion_sorter:main"
folder-sorter = "folder_sorter:main"
href-parser = "href_parser:main"
macosx-folder-deleter = "macosx_folder_deleter:main"
pdf-converter = "pdf_converter:main"
pdf-link-extractor = "pdf_link_extractor:main"
prefix-matcher = "prefix_matcher:main"
wav-to-flac = "wav_to_flac:main"
